legis_error.log

--- 2026-06-16 09:47:32.194092 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\documentos_page.py", line 600, in <lambda>
    act_word.triggered.connect(lambda: self.exportar("docx"))
                                       ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\documentos_page.py", line 846, in exportar
    caminho, _ = QFileDialog.getSaveFileName(self, f"Exportar como {ext.upper()}",
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: wrapped C/C++ object of type DocumentosPage has been deleted

--- 2026-06-16 20:49:12.709630 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\main.py", line 61, in <module>
    from core.database import (inicializar_banco, inicializar_consultas,
ImportError: cannot import name 'inicializar_aprendizado' from 'core.database' (C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\core\database.py)

--- 2026-06-16 20:58:07.310876 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\documentos_page.py", line 925, in exportar
    dlg = QFileDialog(self, f"Exportar como {ext.upper()}")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: wrapped C/C++ object of type DocumentosPage has been deleted

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\documentos_page.py", line 606, in <lambda>
    act_word.triggered.connect(lambda: self.exportar("docx"))
                                       ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\documentos_page.py", line 940, in exportar
    QMessageBox.critical(self, "Erro", f"Não foi possível abrir o diálogo de exportação:\n{e}")
RuntimeError: wrapped C/C++ object of type DocumentosPage has been deleted

--- 2026-06-17 22:13:06.827803 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\consulta_datajud_page.py", line 168, in _exibir_resultados
    self.table.setItem(i, 1, QTableWidgetItem(item["movimento"]))
RuntimeError: wrapped C/C++ object of type QTableWidget has been deleted

--- 2026-06-17 22:13:06.850387 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\consulta_datajud_page.py", line 160, in <lambda>
    self.worker.finished.connect(lambda: self.btn_buscar.setEnabled(True))
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: wrapped C/C++ object of type QPushButton has been deleted

--- 2026-06-17 22:30:24.014106 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\main.py", line 72, in <module>
    from ui.main_window import MainWindow
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\main_window.py", line 349
    self.mudar_tela(self._indice_atual).\limpar_cache.bat
                                         ^
SyntaxError: unexpected character after line continuation character

--- 2026-06-17 22:58:48.026780 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 641, in _abrir_detalhes
    self.painel.carregar_processo(self._dados[rows[0].row()])
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 341, in carregar_processo
    self._carregar_agenda()
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 359, in _carregar_agenda
    self.table_ag.setRowCount(len(compromissos))
RuntimeError: wrapped C/C++ object of type QTableWidget has been deleted

--- 2026-06-17 23:02:29.741583 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 672, in _abrir_detalhes
    self.painel.carregar_processo(self._dados[idx])
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 347, in carregar_processo
    self._carregar_agenda()
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\processos_page.py", line 377, in _carregar_agenda
    self.table_ag.setRowCount(len(compromissos))
RuntimeError: wrapped C/C++ object of type QTableWidget has been deleted

--- 2026-06-17 23:11:15.409921 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\financeiro_page.py", line 38, in paintEvent
    p = QPainter(self)
        ^^^^^^^^^^^^^^
RuntimeError: wrapped C/C++ object of type GraficoBarras has been deleted

--- 2026-06-17 23:17:40.419238 ---
Traceback (most recent call last):
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\clientes_page.py", line 154, in abrir_novo
    dlg = ClienteDialog(self)
          ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\user\OneDrive\Imagens\Desktop\Software\Legis\ui\clientes_page.py", line 49, in __init__
    layout.addLayout(form)
RuntimeError: wrapped C/C++ object of type QVBoxLayout has been deleted
